Application/ngyaml/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
# set your lab user name
  name: user6-ng
spec:
  replicas: 3
  selector:
    matchLabels:
# set your lab user name
      app: user6-ng
  template:
    metadata:
      labels:
# set your lab user name
        app: user6-ng
    spec:
      containers:
        - resources: {}
          terminationMessagePath: /dev/termination-log
          name: ng
          ports:
            - containerPort: 8080
              protocol: TCP
          imagePullPolicy: IfNotPresent
# update with the image you build in part 1
          image: 'quay.io/metal4life/mycoolimage:ng_v47'
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
