Application/ngyaml/service.yaml
kind: Service
apiVersion: v1
metadata:
# set your user name
  name: user6-ng
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  selector:
# set your user name
    app: user6-ng
